--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-node_modules
-dist
-.tmp
-bower_components
-test/bower_components
+/node_modules
+/dist
+/.tmp
+/bower_components
+/test/bower_components
+/Makefile
